# grimdawn-parser

./: .dir-locals.el  .editorconfig  .gitignore  .gitmodules  .ignore  .justfile  .lldbinit  .lvimrc  .vimrc  CMakeLists.txt  README.org  block.hpp  character_bio.hpp  character_info.hpp  character_skill.hpp  character_stash.hpp  common.cpp  common.hpp  decrypt.cpp  faction_data.hpp  faction_pack.hpp  gdc_file.hpp  hot_slot.hpp  inventory.hpp  inventory_equipment.hpp  inventory_sack.cpp  inventory_sack.hpp  item.hpp  item_skill.hpp  lldb_setup.py  lore_notes.hpp  marker_list.hpp  play_stats.cpp  play_stats.hpp  player.json  respawn_list.hpp  shrine_list.hpp  skill.hpp  skill_map.hpp  stash_item.hpp  (+7 more)
data/: players.db  tagSkillClassName.csv
grimdawn_decoded/: all-characters-combined.json
grimdawn_decoded/Ali/: player.json
grimdawn_decoded/Alki/: player.json
grimdawn_decoded/Andy/: player.json
grimdawn_decoded/Angus/: player.json
grimdawn_decoded/Arcanor/: player.json
grimdawn_decoded/Aven/: player.json
grimdawn_decoded/Aven the Sav/: player.json
grimdawn_decoded/Bale/: player.json
scripts/: combine_player_info.sh  copy_player_files.sh  decode_player_info.sh  decode_players_info.sh  edit_players_info.sh  filter_player.jq  filter_player_json.sh  filter_players_json.sh  import_player_json_to_db.py  import_player_json_to_postgres_db.py  import_player_json_to_sqlite_db.py  import_players_to_db.sh  minify.jq
src/: block.cpp  block.hpp  block_field.hpp  character_bio.cpp  character_bio.hpp  character_info.cpp  character_info.hpp  character_skill.cpp  character_skill.hpp  character_stash.cpp  character_stash.hpp  common.hpp  decrypt.cpp  faction_data.cpp  faction_data.hpp  faction_pack.cpp  faction_pack.hpp  file.hpp  format.cpp  format.hpp  gdc_file.cpp  gdc_file.hpp  gdc_file_reader.cpp  gdc_file_reader.hpp  gdc_file_writer.cpp  gdc_file_writer.hpp  gdc_object.hpp  header.cpp  header.hpp  hot_slot.cpp  hot_slot.hpp  inventory.cpp  inventory.hpp  inventory_equipment.cpp  inventory_equipment.hpp  inventory_item.cpp  inventory_item.hpp  inventory_sack.cpp  inventory_sack.hpp  item.cpp  (+40 more)
tableau/: Grimdawn Player Info.twb  grimdawn_players.hyper  grimdawn_players.twb  players.hyper  players.twb
test_output/: all-characters.json
testfiles/: combined.json
(+405 files in other folders)
